TimeSeries: Reduce font size in input tag to avoid clipping of glyphs on Mac
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@3245 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/TimeSeries/css/timeseries.css
+++ b/chsdi/public/GeoAdmin.ux/TimeSeries/css/timeseries.css
@@ -172,7 +172,7 @@
     top: 2px;
     width: 44px;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .timeseriesWidgetShadow {
